# annotation-efficient-po

./: README.md  gitignore  pyproject.toml
aepo/: cli.py  preprocess.py
aepo/mbr/: mbr_engine.py  reward_engine.py  reward_model.py  utility_func.py
aepo/mbr/policy/: diverse_mbr.py  mbr.py
dataset/: output_example.csv
docs/: .buildinfo  aepo.html  aepo.mbr.html  aepo.mbr.policy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: aepo.mbr.policy.rst.txt  index.rst.txt  quickstart.rst.txt
docs/_static/: documentation_options.js
dpo/: dpo.py
html/: modules.html
