[tool.poetry]
name = "aepo"
version = "0.1.4"
description = "Annotation Efficient Preference Optimization"
authors = ["Yuu Jinnai <ddyuudd@gmail.com>"]
readme = "README.md"
repository = "https://github.com/CyberAgentAILab/annotation-efficient-po"
documentation = "https://CyberAgentAILab.github.io/annotation-efficient-po"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
datasets = "^2.10.0"
torch = "^2.3.0"
transformers = "^4.40.2"
numpy = "^1.26.4"
tqdm = "^4.66.4"
evaluate = "^0.4.2"
llm-blender = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
aepo = "aepo.cli:aepo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
